err/krankshaft.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/krankshaft'...
Listing './lib/python3.5/site-packages/krankshaft/compat'...
Compiling './lib/python3.5/site-packages/krankshaft/serializer.py'...
***   File "./lib/python3.5/site-packages/krankshaft/serializer.py", line 170
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/krankshaft/static'...
Listing './lib/python3.5/site-packages/krankshaft/static/js'...
Listing './lib/python3.5/site-packages/krankshaft-0.3.17.egg-info'...
Listing './lib/python3.5/site-packages/mimeparse-0.1.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/tests/krankshaft'...
Compiling './lib/python3.5/site-packages/tests/krankshaft/test_api.py'...
***   File "./lib/python3.5/site-packages/tests/krankshaft/test_api.py", line 97
    except Exception, exc:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tests/krankshaft/test_serializer.py'...
***   File "./lib/python3.5/site-packages/tests/krankshaft/test_serializer.py", line 52
    for value in self.serializer.primitive_values + (1, 1L, 1.1, 'a', u'a'):
                                                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tests/krankshaft/test_valid.py'...
***   File "./lib/python3.5/site-packages/tests/krankshaft/test_valid.py", line 258
    self.expect(valid.date, '2013-11-06', date(2013, 11, 06))
                                                          ^
SyntaxError: invalid token

Listing './share'...
Listing './share/python-wheels'...
